MultiService-Kubernetes-App/k8s/node-api-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata: 
  name: node-api
  namespace: node-api-app
spec: 
  replicas: 2
  strategy: 
    type: RollingUpdates
    rollingUpdate: 
      maxSurge: 1                    #how many extra pods can be created during the update
      maxunavailable: 0              #how many pods can be unavailabel during the updates 
    selector:
      matchLabels: 
        app: node-api
    template: 
      metadata: 
        labels:
          app: node-api
    spec: 
      containers: 
        - name: node-api
          image: gowdaamith/node-api:latest
          ports: 
          - containerPort: 3000
          readinessProbe: 
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resource:
            requests: 
              cpu: "100m"
              memory: "128Mi"
            limits: 
              cpu: "500m"
              memory: "256Mi"
