MultiService-Kubernetes-App/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo
  namespace: node-api-app
spec:
  ports: 
  - port: 27017
  clusterIP: None
  selector: 
    app: mongo
