MultiService-Kubernetes-App/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: node-api-ingress
  namespace: node-api-app
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
  - host: node-api.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: node-api-service
            port: 
              number: 80
